Correct spacing of entity description

--- a/jujugui/static/gui/src/app/components/profile/bundle-list/_bundle-list.scss
+++ b/jujugui/static/gui/src/app/components/profile/bundle-list/_bundle-list.scss
@@ -35,6 +35,10 @@
     .cold-link {
       color: #111;
     }
+
+    &__entity-desc {
+      padding: 0 12px 0 18px;
+    }
   }
 
   .profile-expanded-content .profile-expanded-content__top-row:first-child {
